refactor: Enhance ReporteService with improved null handling and code readability
- Updated species categorization logic to handle null or empty species values, categorizing them as "Otro".
- Replaced hardcoded species category strings with constants for better maintainability.
- Simplified stream collection methods by using toList() instead of collect(Collectors.toList()), improving code clarity.
- Enhanced extraction of the first name from veterinarians' names to ensure safe handling of null or empty values.